--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -18,9 +18,9 @@
       <%= image_fu p.hero_image, nil, id: 'big-image', class: 'hidden-desktop' %>
       <div class="container home-hero">
     		<div class="row-fluid">
-    			<div class="span4 offset8" id="quotebox" >
-            <h4><%= p.title %></h4>
-      			<div class="hidden-phone"><p><%= raw p.testimonial %></p></div>
+    			<div class="span5 offset7" id="quotebox" >
+            <h1><%= p.title %></h1>
+      			<div class="hidden-phone"><p><%#= raw p.testimonial %></p></div>
     			</div>
     		</div>
       </div>
