--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -17,7 +17,7 @@
       </a>
 
   		<a class="brand" href="/">
-  			<%= image_tag "logo-200.png" %>
+  			<%= image_tag "WieserGreenLogo.png" %>
   		</a>
 
       <div class="nav-collapse collapse">
