--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <% content_for :intro do %>
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class="carousel slide carousel-fade">
   
   <ol class="carousel-indicators">
     <% @projects_for_home.each_with_index do |p, index| %>
