fixed buckets z-index

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -44,7 +44,7 @@
 
 <div class="row-fluid" id="home-bucket-section">
 
-<div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;">
+<div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;z-index:1000;">
 	<div class="span12" style="padding:20px;">
 	<div class="span4">
 		<h1>Trust<br />Partnership<br />Excellence</h1>
