emp op to careers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
             <ul>
               <li><%= link_to 'Contact Us', '/contact-us' %></li>
               <li><%= link_to 'News', '/news' %></li>
-              <li><%= link_to 'Employment Opportunities', '/employment-opportunities' %></li>
+              <li><%= link_to 'Careers', '/careers' %></li>
               <li><%= link_to 'Bid Opportunities', '/bid-opportunities' %></li>
             </ul>
           </div>
