--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,8 @@ $dark_gray:#636363;
 
 .red-border {border:1px solid red;}
 
+a:hover {background-color:transparent !important;}
+
  html, body {margin:0;padding:0;background-color:$light_gray;}
 
  h1 {font-family:'Impact W15 2010';}
