green initiatives home

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -57,7 +57,7 @@
 	</div>
 	<div class="span4">
 		<%= image_tag "bucket3.png" %>
-		<h3><i class="icon-chevron-right"></i> Green Technologies</h3>
+		<h3><i class="icon-chevron-right"></i> <%= link_to 'Green Initiatives', '/green-initiatives' %></h3>
 	</div>
 </div>
 
