--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -59,6 +59,7 @@
 	#quotebox p {font-size:14px;}
 
 	#home-bucket-section {margin-top:110px;}
+	#quotebox h1 {font-size:24px;font-family:helvetica, arial, sans-serif;font-weight:normal;}
 
  }
  
