--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -2,13 +2,13 @@
 <div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
 <div class="span4" id="sidebar">
 	<div id="quotebox-l2">
-		<strong><%= raw @testimonial.title %></strong>
-		<%= raw @testimonial.testimonial %>
+		<strong><%#= raw @testimonial.title %></strong>
+		<%#= raw @testimonial.testimonial %>
 	</div>
 	<div id="featured-project">
 		<h6>Featured project</h6>
-		<h4><%= raw @random_project.title %></h4>
-		<%= image_fu(@random_project.hero_image) %>
+		<h4><%#= raw @random_project.title %></h4>
+		<%#= image_fu(@random_project.hero_image) %>
 	</div>
 
 </div>
