--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ $dark_gray:#636363;
 
 .red-border {border:1px solid red;}
 
-a:hover {background-color:transparent !important;}
+a:hover {background-color:$light_gray !important;color:$wieser_green !important;}
 
  html, body {margin:0;padding:0;background-color:$light_gray;}
 
