--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,7 @@ $dark_gray:#636363;
 
 .red-border {border:1px solid red;}
 
-a:hover {background-color:$light_gray !important;color:$wieser_green !important;}
+a:hover {background-color:transparent !important;color:$wieser_green !important;}
 
  html, body {margin:0;padding:0;background-color:$light_gray;}
 
@@ -97,15 +97,17 @@ a:hover {background-color:$light_gray !important;color:$wieser_green !important;
 
 #quotebox {
 	position:absolute;
-	background-color:none;
-	opacity:0.9;
-	min-height:200px;
+	top:30px;
+	background-color:#000000;
+	opacity:0.7;
+	min-height:1em;
 	padding:20px;
-	border-radius:3px;
-	h1 {
+	border-radius:5px;
+	h2 {
 		color:$white;
 		text-shadow: 2px 2px #000000;
-		font-size:56px;
+		font-size:32px;
+		font-weight:100;
 		line-height:1em;
 	} a {
 		color:$white;
