--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -19,7 +19,7 @@
       <div class="container home-hero">
     		<div class="row-fluid">
     			<div class="span5 offset7" id="quotebox" >
-            <h2><%= link_to p.title, refinery.projects_project_path(p) %></h2>
+            <h2><i class="icon-chevron-right"></i> <%= link_to p.title, refinery.projects_project_path(p) %></h2>
       			<div class="hidden-phone"><p><%#= raw p.testimonial %></p></div>
     			</div>
     		</div>
