--- a/app/views/shared/_footer_links.html.erb
+++ b/app/views/shared/_footer_links.html.erb
@@ -2,13 +2,16 @@
         <div class="container">
         <div class="row-fluid" style="min-height:200px;">
           <div class="span4 form-horizontal" id="email-sign-up">
-            <form>
+            
+              <%= render 'search' %>
+              <form>
               <fieldset>
                 <label>Search</label>
                 <input type="text" placeholder="Search..." class="span9">
                 <button type="submit" class="btn">Submit</button>
-              </fieldset>
-            </form>
+              </fieldset></form>
+            
+            
           </div>
           <div class="span2">
             <ul>
