--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -13,19 +13,22 @@
 <% @projects_for_home.each_with_index do |p, index| %>
 <div class="<% if index == 0 %>active<% end %> item">
   
-    <div id="intro">
+    <div id="intro" style="padding-top:20px;padding-bottom:70px;background-color:#13211c;">
       <!-- load image here for phone and tablet -->
       <%= link_to (image_fu p.hero_image, '1200x600c', id: 'big-image', class: 'hidden-desktop'), refinery.projects_project_path(p) %>
       <div class="container home-hero">
     		<div class="row-fluid">
-    			<div class="span5 offset7" id="quotebox" >
+    			<div class="span4 offset87" id="quotebox" >
             <h2><i class="icon-chevron-right"></i> <%= link_to p.title, refinery.projects_project_path(p) %></h2>
       			<div class="hidden-phone"><p><%#= raw p.testimonial %></p></div>
     			</div>
     		</div>
       </div>
       <!-- load image here for desktop - hide for phone and tablet -->
-      <%= link_to (image_fu p.hero_image, nil, id: 'big-image', class: 'hidden-phone hidden-tablet'), refinery.projects_project_path(p)  %>
+
+      <%= link_to (image_fu p.hero_image, '1170x500c', id: 'big-image', class: 'hidden-phone hidden-tablet'), refinery.projects_project_path(p)  %>
+      <!-- img src="http://placehold.it/1170x500" id="big-image" / -->
+
     </div>
   
 </div>
@@ -44,7 +47,7 @@
 
 <div class="row-fluid" id="home-bucket-section">
 
-<div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;z-index:1000;">
+<div class="row-fluid home-buckets" style="margin-top:-50px;position:relative;z-index:1000;">
 	<div class="span12" style="padding:20px;">
 	<div class="span4">
 		<h1>Trust<br />Partnership<br />Excellence</h1>
@@ -62,6 +65,15 @@
 </div>
 
 </div>
+
+<%#= render 'shared/search' %>
+
+<%#= form_tag refinery.search_path do -%>
+                  <%#= text_field_tag :query, {}, {:type => "search",
+                     :placeholder => "Search site for...", 
+                     :value => (params[:query] if params[:query])} %>
+                  <%#= submit_tag 'Search' %>
+                <%# end %>
 <%#= render '/refinery/content_page' %>
 
 </div>
