--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -15,7 +15,7 @@
  
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) { 
-	body {border:1px solid green;}
+	/*body {border:1px solid green;}*/
 	.home-buckets .span4:first-child h1 {height:75px;}
 	.home-buckets h1 {font-size:20px;line-height:20px;}
 	.home-buckets h3 {font-size:14px;}
@@ -49,7 +49,7 @@
  
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) { 
-	body {border:1px solid blue;}
+	/*body {border:1px solid blue;}*/
 	footer .span4 {margin-bottom:20px !important;}
 	footer .span2 {width:50% !important;float:left !important;height:8em;}
 	.form-horizontal .btn {margin-top:10px;}
@@ -74,7 +74,7 @@
  
 /* Landscape phones and down */
 @media (max-width: 480px) { 
-	body {border:1px solid yellow;}
+	/*body {border:1px solid yellow;}*/
 	.form-horizontal .btn {margin-top:10px;width:100%;}
 	.home-buckets {border-radius:0;}
 	#home-bucket-section {margin-top:100px;}
