--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -59,7 +59,10 @@
 		<h3><i class="icon-chevron-right"></i> <%= link_to 'Our Latest Projects', '/projects' %></h3>
 	</div>
 	<div class="span4">
-		<%= image_tag "bucket3.png" %>
+		<%#= image_tag "bucket3.png" %>
+    <%#= image_fu(@news_item.news_image, '357x140#c') %>
+    <%= @news_item.title %>
+    <%#= image_fu(@news_item.title
 		<h3><i class="icon-chevron-right"></i> <%= link_to 'Green Initiatives', '/green-initiatives' %></h3>
 	</div>
 </div>
