--- a/app/views/refinery/news/items/index.html.erb
+++ b/app/views/refinery/news/items/index.html.erb
@@ -6,7 +6,7 @@
       <article class="news_item_truncated">
         <h2><%= link_to item.title, refinery.news_item_path(item) %></h2>
         <p>
-          <small><%= t('.published') %> <%= l(item.publish_date, :format => :short) %></small>
+          <small><%= t('.published') %> <%= l(item.publish_date, :format => :long) %></small>
         </p>
         <%= truncate  item.body, :length => 200,
                       :omission => " ... #{link_to t('.read_more'), refinery.news_item_path(item)}",
@@ -23,14 +23,6 @@
 <% content_for :body_content_right_prepend do -%>
   <%= raw @page.content_for(::Refinery::Pages.default_parts.second.to_sym) %>
 <% end if ::Refinery::Pages.default_parts.many? -%>
+<%= render :partial => '/refinery/news/shared/body_content_right' %>
 
-
-<div class="row-fluid" id="l2-main">
-  <div class="span8" id="l2-main">
-    <%= render :partial => "/refinery/content_page" %>
-  </div>
-  <div class="span4" id="sidebar">
-    <%= render :partial => '/refinery/news/shared/body_content_right' %>
-
-  </div>
-</div>
+<%= render :partial => "/refinery/content_page" %>
