--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -59,7 +59,11 @@
 		<h3><i class="icon-chevron-right"></i> <%= link_to 'Our Latest Projects', '/projects' %></h3>
 	</div>
 	<div class="span4">
-		<%= image_tag "bucket3.png" %>
+		<%#= image_tag "bucket3.png" %>
+    <%#= image_tag(@news_item.image_id.thumbnail('100x100').url) %>
+    <%#= image_fu(@news_item.image_id, '100x100#c') %>
+    <%= @news_item.title %>
+    <%#= image_fu(@news_item.title
 		<h3><i class="icon-chevron-right"></i> <%= link_to 'Green Initiatives', '/green-initiatives' %></h3>
 	</div>
 </div>
