--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -65,10 +65,10 @@
 
     <%#= image_tag(@news_item.image_id.thumbnail('100x100').url) %>
     <%#= image_fu(@news_item.image_id, '100x100#c') %>
-
+<h3>
     <%= @news_item.title %>
     <%#= image_fu(@news_item.title
-		<h3><i class="icon-chevron-right"></i> <%= link_to 'Green Initiatives', '/green-initiatives' %></h3>
+		<i class="icon-chevron-right"></i> <%= link_to 'Green Initiatives', '/green-initiatives' %></h3>
 	</div>
 </div>
 
