--- a/app/views/refinery/news/admin/items/_form.html.erb
+++ b/app/views/refinery/news/admin/items/_form.html.erb
@@ -31,7 +31,7 @@
     <%= render '/refinery/admin/image_picker',
                :f => f,
                :field => :news_hero_image_id,
-               :image => @item.news_hero_image_id,
+               :image => @item.news_hero_image,
                :toggle_image_display => false %> 
 
   </div>
