--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,18 +1,8 @@
 <div class="row-fluid">
-<div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
-<div class="span4" id="sidebar">
-	<div id="quotebox-l2">
-		<strong><%#= raw @testimonial.title %></strong>
-		<%#= raw @testimonial.testimonial %>
-	</div>
-	<div id="featured-project">
-		<h6>Featured project</h6>
-		<h4><%#= raw @random_project.title %></h4>
-		<%#= image_fu(@random_project.hero_image) %>
-	</div>
-
-</div>
-
-	
-</div>
+  <div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
+    <div class="span4" id="sidebar" style="">
+    	<%= testimonial_check(@testimonial) %>
+    	<%= raw featured_project_check(@random_project) %>
+    </div>	
+  </div>
 </div>
