--- a/app/views/refinery/search/show.html.erb
+++ b/app/views/refinery/search/show.html.erb
@@ -25,11 +25,8 @@
   <div class="span8" id="l2-main"><%= render :partial => "/refinery/content_page" %></div>
     <div class="span4" id="sidebar" style="">
       <%= testimonial_check(@testimonial) %>
-      <div id="featured-project">
-        <h6>Featured project</h6>
-        <h4><%= raw @random_project.title %></h4>
-        <%= image_fu(@random_project.hero_image) %>
-      </div>
+      <%= raw featured_project_check(@random_project) %>
+    
     </div>
   </div>
 </div>
