--- a/app/views/refinery/news/items/show.html.erb
+++ b/app/views/refinery/news/items/show.html.erb
@@ -1,20 +1,47 @@
-<% content_for :body_content_title, @item.title %>
-<% content_for :body_content_left do %>
-  <article class="news_item">
-    <p>
-      <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
-    </p>
-    <% if @item.source.present? %>
+<div class="row-fluid">
+  <div class="span8" id="l2-main">
+    <% content_for :body_content_title, @item.title %>
+    <% content_for :body_content_left do %>
+    <article class="news_item">
       <p>
-        <small><%= t('.source') %> <%= @item.source %></small>
+        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
       </p>
+      <% if @item.source.present? %>
+        <p>
+          <small><%= t('.source') %> <%= @item.source %></small>
+        </p>
+      <% end %>
+      <%= @item.body.html_safe %>
+      <p>
+        <%= link_to t('.back_to_index'), refinery.news_items_path %>
+      </p>
+    </article>
     <% end %>
-    <%= @item.body.html_safe %>
-    <p>
-      <%= link_to t('.back_to_index'), refinery.news_items_path %>
-    </p>
-  </article>
-<% end %>
-<% content_for :body_content_right, render(:partial => 'recent_posts') %>
+    <%= render :partial => "/refinery/content_page" %>
+  </div>
 
-<%= render :partial => "/refinery/content_page" %>
+  <div class="span4" style="padding-top:73px;">
+    <h3>Recent News</h3>
+    <ul>
+    <% @items.each do |item| %>
+      <li>
+        <%= link_to item.title, refinery.news_item_path(item) %><br />
+        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
+      </li>
+    <% end %>
+    </ul>
+  </div>
+    <%#= content_for :body_content_right, render(:partial => 'recent_posts') %>
+
+  
+
+
+</div>
+
+
+
+
+
+
+
+
