--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,8 +40,13 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
  	background-color:$light_gray;
  	height:120px;
  	
+ }
 
+ .news_items div {
 
+ 	margin-bottom:20px;
+
+ 	
  }
 
  .brand {
