--- a/app/views/refinery/news/items/show.html.erb
+++ b/app/views/refinery/news/items/show.html.erb
@@ -5,12 +5,14 @@
     <article class="news_item">
       <p>
         <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
+        <small class="pull-right"><strong><%= link_to t('.back_to_index'), refinery.news_items_path %></strong></small>
       </p>
       <% if @item.source.present? %>
         <p>
           <small><%= t('.source') %> <%= @item.source %></small>
         </p>
       <% end %>
+      <div style="margin-bottom:20px;"><%= image_fu(@item.news_hero_image) %></div>
       <%= @item.body.html_safe %>
       <p>
         <%= link_to t('.back_to_index'), refinery.news_items_path %>
@@ -30,6 +32,7 @@
       </li>
     <% end %>
     </ul>
+
   </div>
     <%#= content_for :body_content_right, render(:partial => 'recent_posts') %>
 
