--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,7 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
  	
  	background-color:$light_gray;
  	height:120px;
+ 	border-bottom:1px dotted #cdcdcd;
  	
  }
 
