--- a/app/views/refinery/search/show.html.erb
+++ b/app/views/refinery/search/show.html.erb
@@ -1,5 +1,6 @@
 <% content_for :body_content_title do %>
   <%= t('.search_results_for', :what => params[:query]) %>
+  <!-- test -->
 <% end %>
 
 <% content_for :body do %>
