--- a/app/views/refinery/search/show.html.erb
+++ b/app/views/refinery/search/show.html.erb
@@ -1,7 +1,7 @@
-<% content_for :body_content_title do %>
+<%# content_for :body_content_title do %>
   <%= t('.search_results_for', :what => params[:query]) %>
   <!-- test -->
-<% end %>
+<%# end %>
 
 <% content_for :body do %>
   <% if @results.empty? %>
