--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -241,7 +241,9 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 		// width:150px;
 		// margin-right:20px;
 		padding:10px;
-		margin-bottom:10px;
+		margin-bottom:15px;
+		margin-left:0px;
+		margin-right:15px;
 		clear:right;
 		background-color:$light_gray;
 		
