--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
  h3 {font-family:helvetica, arial, sans-serif !important;font-size:18pt !important; font-weight:100 !important;}
  h4 {font-weight:100 !important;}
  #header-row {
- 	
+ 	position:relative;
  	background-color:$light_gray;
  	height:120px;
  	border-bottom:1px dotted #cdcdcd;
@@ -75,7 +75,6 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 	background: -ms-linear-gradient(top, #13211c 0%,#002611 50%,#13211c 100%); /* IE10+ */
 	background: linear-gradient(to bottom, #13211c 0%,#002611 50%,#13211c 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#13211c', endColorstr='#13211c',GradientType=0 ); /* IE6-8 */
- 	
 
  	#big-image {
  		/*width:100%;*/
@@ -199,11 +198,16 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 	margin-bottom:40px;
 }
 
-#sidebar {margin-top:104px;}
+#sidebar {
+	margin-top:104px;
+	border-left:1px dotted #636363;
+	padding-left:20px;
+}
 
 .home-buckets {
 	background-color:$white;
 	border-radius:5px;
+	margin-top:-50px;position:relative;z-index:1000;
 	.span4 {
 		
 	}
