--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,6 +182,8 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 	opacity:0.7;
 	background:url('trans-quote.png') no-repeat -11px -6px $slate_blue;
 	margin-bottom:20px;
+	color:#000000;
+	h3 {margin-top:0;line-height:1em;text-shadow:1px 0px 0px #cdcdcd;color:#000000 !important;}
 }
 
 #featured-project {
