--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,7 +1,8 @@
 <div class="row-fluid">
   <div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
     <div class="span4" id="sidebar" style="">
-    	<%= testimonial_check(@testimonial) %>
+    	<%#= @testimonial.testimonial %>
+    	<%= raw testimonial_check(@testimonial) %>
     	<%= raw featured_project_check(@random_project) %>
     </div>	
   </div>
