--- a/app/views/refinery/news/items/index.html.erb
+++ b/app/views/refinery/news/items/index.html.erb
@@ -42,7 +42,7 @@
   </div>
   <div class="span4" id="sidebar">
     <%= render :partial => '/refinery/news/shared/body_content_right' %>
-    <%= testimonial_check(@testimonial) %>
+    <%= raw testimonial_check(@testimonial) %>
     <%= raw featured_project_check(@random_project) %>
   </div>
 </div>
