--- a/app/views/refinery/news/items/index.html.erb
+++ b/app/views/refinery/news/items/index.html.erb
@@ -10,7 +10,7 @@
           <div class="span9" >
             <h3 style="margin-top:0;padding:0;"><%= link_to item.title, refinery.news_item_path(item) %></h3>
             <p style="margin-top:-1em;">
-            <small><%= t('.published') %> <%= l(item.publish_date, :format => :long) %></small>
+            <small><%= t('.published') %> <%= l(item.publish_date, :format => :short) %></small>
             </p>
             <%= truncate  item.body, :length => 200,
                       :omission => " ... #{link_to t('.read_more'), refinery.news_item_path(item)}",
