--- a/app/views/refinery/news/items/show.html.erb
+++ b/app/views/refinery/news/items/show.html.erb
@@ -4,7 +4,7 @@
     <% content_for :body_content_left do %>
     <article class="news_item">
       <p>
-        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
+        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :short) %></small>
         <small class="pull-right"><strong><%= link_to t('.back_to_index'), refinery.news_items_path %></strong></small>
       </p>
       <% if @item.source.present? %>
@@ -28,7 +28,7 @@
     <% @items.each do |item| %>
       <li>
         <%= link_to item.title, refinery.news_item_path(item) %><br />
-        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :long) %></small>
+        <small><%= t('.published') %> <%= l(@item.publish_date, :format => :short) %></small>
       </li>
     <% end %>
     </ul>
