--- a/app/views/refinery/news/items/index.html.erb
+++ b/app/views/refinery/news/items/index.html.erb
@@ -43,6 +43,7 @@
   <div class="span4" id="sidebar">
     <%= render :partial => '/refinery/news/shared/body_content_right' %>
     <%= raw testimonial_check(@testimonial) %>
+    <%#= raw test_helper %>
     <%= raw featured_project_check(@random_project) %>
   </div>
 </div>
