--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -205,6 +205,8 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 	margin-top:104px;
 	border-left:1px dotted #636363;
 	padding-left:20px;
+	padding-bottom:50px;
+	margin-bottom:20px;
 }
 
 .home-buckets {
