fix sidebar on search template

--- a/app/views/refinery/search/show.html.erb
+++ b/app/views/refinery/search/show.html.erb
@@ -26,7 +26,7 @@
 <div class="row-fluid">
   <div class="span8" id="l2-main"><%= render :partial => "/refinery/content_page" %></div>
     <div class="span4" id="sidebar" style="">
-      <%= testimonial_check(@testimonial) %>
+      <%= raw testimonial_check(@testimonial) %>
       <%= raw featured_project_check(@random_project) %>
     
     </div>
