add contact info

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -209,6 +209,10 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 	margin-bottom:20px;
 }
 
+#contact_info {
+	margin-top:150px;
+}
+
 .home-buckets {
 	background-color:$white;
 	border-radius:5px;
