--- a/app/views/refinery/news/items/index.html.erb
+++ b/app/views/refinery/news/items/index.html.erb
@@ -45,6 +45,7 @@
     <%= raw testimonial_check(@testimonial) %>
     <%#= raw test_helper %>
     <%= raw featured_project_check(@random_project) %>
+    <%= render '/shared/contact_info' %>
   </div>
 </div>
 
