--- a/app/views/refinery/news/items/show.html.erb
+++ b/app/views/refinery/news/items/show.html.erb
@@ -32,6 +32,7 @@
       </li>
     <% end %>
     </ul>
+    <%= render '/shared/contact_info' %>
 
   </div>
     <%#= content_for :body_content_right, render(:partial => 'recent_posts') %>
