--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -4,6 +4,7 @@
     	<%#= @testimonial.testimonial %>
     	<%= raw testimonial_check(@testimonial) %>
     	<%= raw featured_project_check(@random_project) %>
+      <%= render '/shared/contact_info' %>
     </div>	
   </div>
 </div>
