--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,9 @@
           <div class="span2">
             <ul>
               <li><%= link_to 'Projects', '/projects' %></li>
-              <li><%= link_to 'Current Projects', '/projects' %></li>
+              <!-- <li><%#= link_to 'Current Projects', '/projects' %></li> -->
               <li><%= link_to 'Completed Projects', '/projects_completed' %></li>
-              <li><%= link_to 'Archives', 'projects_archived' %></li>
+              <li><%= link_to 'Archives', '/projects/projects_archived' %></li>
             </ul>
           </div>
           <div class="span2">
@@ -68,7 +68,7 @@
           </div>
           <div class="span2">
             <ul>
-              <li><%= link_to 'Contact Us', '/contact-us' %></li>
+              <li><%= link_to 'Contact Us', '/contact' %></li>
               <li><%= link_to 'News', '/news' %></li>
               <li><%= link_to 'Careers', '/careers' %></li>
               <li><%= link_to 'Bid Opportunities', '/bid-opportunities' %></li>
