make logo larger, take away WB in header

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,9 +52,9 @@ a:hover {background-color:transparent !important;color:$wieser_green !important;
 
  .brand {
  	
- 	margin:-10px 0 0 0;
+ 	margin:-8px 0 0 0;
  	height:100px;
- 	background:url('WB-3.jpg') -0px -3px no-repeat $light_gray;
+ 	//background:url('WB-3.jpg') -0px -3px no-repeat $light_gray;
  	img {
  		padding-left:40px;
  	}
