--- a/app/views/shared/_contact_info.html.erb
+++ b/app/views/shared/_contact_info.html.erb
@@ -1,7 +1,7 @@
 <div id="contact_info">
 200 Twilite Street<br />
 La Crescent, MN 55947<br />
-507-895-8903<br />
-Fax 507-895-8438<br />
-<%= link_to 'info@wieserbrothers.com', 'mailto:info@wieserbrothers.com' %>
+<i class="fa fa-phone"></i> 507-895-8903<br />
+<i class="fa fa-print"></i> Fax 507-895-8438<br />
+<i class="fa fa-envelope"></i> <%= link_to 'info@wieserbrothers.com', 'mailto:info@wieserbrothers.com' %>
 </div>
