--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -79,15 +79,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdcdcd', end
 
  	}
 
+ 	.nav-row {
+ 		margin-top:5px;height:42px;background-color:$wieser_green;text-align:center;
+
+ 	}
+
+.navbar .nav {}
+
  .navbar-inner .nav li a {
- 	border-radius:5px;
+ 
  	height:20px;
  	line-height:0px;
  }
 
  .navbar-inner .nav li a {
- 	margin-top:30px;
+ 	margin-top:1px;
  	line-height:20px !important;
+ 	color:$white !important;
  }
 
  .navbar-inner .nav li a:hover {
@@ -96,6 +104,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdcdcd', end
  	text-decoration:underline;
 
  }
+
+ a:hover.btn-navbar {border:1px solid white;background-color:#cdcdcd !important;}
 
  //#home div > div[id] > div {width:940px;border:1px solid black;margin:0 auto;}
  #intro {
