--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
       
       <div id="home" >
         <div id="header-row">
-        <div class="container" >
+        
           <header id="nav">
             <%= render '/refinery/header' -%>
           </header>
-        </div><!-- top container -->
+        <!-- top container -->
       </div>
         <%= yield :intro %>
       </div>
