--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,33 +1,40 @@
 
-<h1 id='logo'>
-  <%#= link_to Refinery::Core.site_name, refinery.root_path %>
-  <%#= image_tag 'logo.png', alt: 'Wieser Brothers, General Contractor, Inc.' %>
-</h1>
+<div class="row">
+<div class="container">
+   <h1 id='logo'>
+   <a class="brand" href="/">
+         <%= image_tag "logo2.png", class: 'img-responsive' %>
+       </a>
+   </h1>
+  </div> 
+</div>
 
+<div class="row nav-row">
+  <div class="container">
 <div class="navbar">
-	<div class="navbar-inner">
-		<div class="container">
+  <div class="navbar-inner">
+    
 
       <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"
-      style="margin-top:30px;">
+      style="margin-top:7px;">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
 
-  		<a class="brand" href="/">
-  			<%= image_tag "logo2.png", width: '250px' %>
-  		</a>
+      
 
       <div class="nav-collapse collapse">
-  		<%= render(:partial => "/refinery/menu", :locals => {
-  		 :roots => refinery_menu('main_menu'),
-  		 :dom_id => 'menu',
-  		 :css => 'menu',
+      <%= render(:partial => "/refinery/menu", :locals => {
+       :roots => refinery_menu('main_menu'),
+       :dom_id => 'menu',
+       :css => 'menu',
 
-  		}) %>
+      }) %>
     </div>
-		</div>
-	</div>
+    
+  </div>
+</div>
+</div><!-- hllo -->
 </div>
