add search to top

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
         <footer>
         <div class="container">
         <div class="row-fluid" style="min-height:200px;">
-          <div class="span4 form-horizontal" id="email-sign-up">
-            <%= yield :search %>
+          <div class="span4 form-horizontal" id="">
+            <%#= yield :search %>
           </div>
           <div class="span2">
             <ul>
