--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,11 +1,24 @@
 
 <div class="row">
 <div class="container">
-   <h1 id='logo'>
+  <div class="row">
+  <div class="span9">
+  <h1 id='logo'>
    <a class="brand" href="/">
          <%= image_tag "logo2.png", class: 'img-responsive' %>
        </a>
    </h1>
+ </div>
+ <div class="span3 form-horizontal" id="email-sign-up" style="margin-top:40px;text-align:right;padding:0;">
+
+    <%= render '/shared/search' %>
+
+
+ </div>
+</div>
+
+
+   
   </div> 
 </div>
 
