add padding to contact page - refactor to l2-main style

--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row-fluid" style="margin-top:40px;">
+<div class="row-fluid" >
   <div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
     <div class="span4" id="sidebar" style="">
       <%= render 'shared/callout' %>
